fixes: Fixed the skill pop-ups clipping off screen

--- a/css/hori.css
+++ b/css/hori.css
@@ -66,7 +66,7 @@
     content: '';
     position: absolute;
     bottom: -6px;
-    left: 50%;
+    left: var(--popup-caret, 50%);
     transform: translateX(-50%) rotate(45deg);
     width: 10px;
     height: 10px;
